--- a/Projet/Project/Project/Project.vcxproj.filters
+++ b/Projet/Project/Project/Project.vcxproj.filters
@@ -44,4 +44,8 @@
       <Filter>Fichiers sources</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="skybox.vert" />
+    <None Include="skybox.frag" />
+  </ItemGroup>
 </Project>
