--- a/Projet/Project/Project/Project.vcxproj
+++ b/Projet/Project/Project/Project.vcxproj
@@ -78,8 +78,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)Project\Dependencies\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)Project\Dependencies\libs;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)Project\Dependencies\include;D:\Documents\ESIEE\E5\OpenGLProject\openglproject\Projet\glfw-3.3.6\include\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)Project\Dependencies\libs;D:\Documents\ESIEE\E5\OpenGLProject\openglproject\Projet\glfw-3.3.6\include\libs;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -154,6 +154,10 @@
     <Text Include="Objet.vert" />
     <Text Include="light_cubeF.frag" />
     <Text Include="light_cubeV.vert" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="skybox.frag" />
+    <None Include="skybox.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
