--- a/Projet/Project/Project/Project.vcxproj
+++ b/Projet/Project/Project/Project.vcxproj
@@ -145,7 +145,7 @@
   <ItemGroup>
     <ClCompile Include="glad.c" />
     <ClCompile Include="Source.cpp" />
-    <ClCompile Include="LightTuto.cpp" />
+    <ClCompile Include="CanYouKillTheEye.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="shader_s.h" />
